deploy/k8s/networking/istio/destinationrules.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: eventsgraph
spec:
  host: eventsgraph
  subsets:
  - name: v1
    labels:
      version: v1
