deploy/k8s/networking/istio/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: graph-virtualservice
spec:
  hosts:
  - "*"
  gateways:
  - graph-gateway
  http:
  - match:
    - uri:
      prefix: "/"
    route:
    - destination:
        host: "eventsgraph"
        subset: v1
      weight: 100
